--- a/src/style.css
+++ b/src/style.css
@@ -11,20 +11,21 @@ a {
   background: white;
   max-width: 600px;
   margin: 45px auto;
-  padding: 30px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
-  box-shadow: 0 30px 50px rgba(65 50, 100, 0.08);
+  padding: 30px;
 }
 
 header {
   border-bottom: 1px solid #f9f7fe;
   padding: 0 0 30px 0;
 }
+
 .search-form-input {
   background-color: #f9f7fe;
   border: none;
   border-radius: 6px;
-  width: 75%;
+  width: 80%;
   font-size: 16px;
   padding: 15px 20px;
 }
@@ -56,22 +57,17 @@ main {
 
 .weather-app-details {
   font-size: 16px;
-  line-height: 20px;
   color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: red;
+  color: #f65282;
 }
 
 .weather-app-temperature-container {
   display: flex;
-}
-
-.weather-app-temperature {
-  font-size: 88px;
-  font-weight: bold;
-  line-height: 88px;
 }
 
 .weather-app-icon {
@@ -79,9 +75,47 @@ main {
   height: 88px;
 }
 
+.weather-app-temperature {
+  font-size: 88px;
+  line-height: 88px;
+  font-weight: bold;
+}
+
 .weather-app-unit {
   margin-top: 6px;
   font-size: 28px;
+}
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-temperature {
+  padding: 0 10px;
 }
 
 footer {
