--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ main {
 }
 
 .weather-forecast-icon {
-  font-size: 38px;
+  width: 68px;
   text-align: center;
 }
 .weather-forecast-temperatures {
